# xmms2-notify

./: AUTHORS  ChangeLog  README  configure.in
src/: Makefile.am  Makefile.in  xmms2-notify.c
