dnl Process this file with autoconf to produce a configure script.
AC_INIT
AC_CONFIG_SRCDIR([configure.in])
AM_INIT_AUTOMAKE(xmms2-notify, 0.1.0)
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

# Required Packages
m4_define([glib_minimum_version], [2.8.0])
m4_define([gtk+-3.0_minimum_version], [0.27.0])
m4_define([xmms2_minimum_version], [0.6])
m4_define([xmms2_client_glib_minimum_version], [0.6])
m4_define([libnotify_minimum_version], [0.4.1])

# Optional Packages

AC_SEARCH_LIBS([strerror],[cposix])
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC

dnl check for mandatory modules
PKG_CHECK_MODULES(XMMS2NOTIFY,
    [glib-2.0 >= glib_minimum_version
     gtk+-3.0 >= gtk+-3.0_minimum_version
        xmms2-client >= xmms2_minimum_version
        xmms2-client-glib >= xmms2_client_glib_minimum_version
        libnotify >= libnotify_minimum_version])


AC_CONFIG_FILES([
Makefile
src/Makefile
])
AC_OUTPUT
